--- a/index.html
+++ b/index.html
@@ -178,11 +178,9 @@
           <a class="portfolio-item" href="#!">
             <div class="caption">
               <div class="caption-content">
-                <div class="h2">¿Cuántos paneles solares se necesitan para cargar un celular?</div>
-                <p class="mb-0">Si necesitas cargar completamente la batería en un día con paneles solares, entonces requerirás de unos 0,9 amperios de carga. Eso lo puedes lograr con un panel solar de 20 W y tu batería podría tener una vida media de unos 3 años aproximadamente.</p>
               </div>
             </div>
-            <img class="img-fluid" src="img/cargador2.jpeg" alt="">
+            <img class="img-fluid" src="img/cargador solary.jpg" alt="">
           </a>
         </div>
       </div>
