--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           <h4>
             <strong>Portátil</strong>
           </h4>
-          <p class="text-faded mb-0">Ligero y fácil de llevar</p>
+          <p class="text-faded mb-0">Llévalo a donde necesites</p>
         </div>
         <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
           <span class="service-icon rounded-circle mx-auto mb-3">
