--- a/menu/misiones/index.html
+++ b/menu/misiones/index.html
@@ -77,6 +77,17 @@
 						</div>
 					</section>
 
+				<!-- Section -->
+				<section>
+					<header>
+						<h2>Misión 6</h2>
+					</header>
+					<div class="content">
+						<p>El sistema que hace funcionar el dispositivo es simple, así que realizamos un gráfico que lo explique y resuma.</p>
+						<span class="image main"><img src="images/sistema.jpeg" alt="" /></span>
+					</div>
+				</section>
+
 				<!-- Elements -->
 				<!--
 					<section>
